group 'BitcoinLatina'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 1.8

//create a single Jar with all dependencies
task customFatJar(type: Jar) {
    manifest {
        attributes 'Main-Class': 'ui.Init'
    }
    baseName = 'test'
    from {
        configurations.compile.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    } {
        exclude "META-INF/*.SF"
        exclude "META-INF/*.DSA"
        exclude "META-INF/*.RSA"
    }
    with jar
}

repositories {
    mavenCentral()
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.json', name: 'json', version: '20170516'
    compile 'com.google.code.gson:gson:2.8.2'
    compile('org.web3j:core:3.2.0')
    compile group: 'commons-io', name: 'commons-io', version: '2.4'
    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.10.0'
    compile 'de.codecentric.centerdevice:centerdevice-nsmenufx:2.1.5'
}
